--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -75,7 +75,7 @@ font-size:15px;
 </string>
     </property>
     <property name="currentIndex">
-     <number>2</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="affiche">
      <attribute name="title">
@@ -239,7 +239,7 @@ font-size:15px;
       <widget class="QPushButton" name="pushButton">
        <property name="geometry">
         <rect>
-         <x>120</x>
+         <x>40</x>
          <y>390</y>
          <width>190</width>
          <height>19</height>
@@ -257,7 +257,7 @@ font-size:15px;
       <widget class="QPushButton" name="pushButton_2">
        <property name="geometry">
         <rect>
-         <x>280</x>
+         <x>250</x>
          <y>390</y>
          <width>190</width>
          <height>19</height>
@@ -280,24 +280,6 @@ font-size:15px;
          <width>151</width>
          <height>61</height>
         </rect>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="pushButton_13">
-       <property name="geometry">
-        <rect>
-         <x>460</x>
-         <y>390</y>
-         <width>190</width>
-         <height>19</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <pointsize>-1</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>Calcul Gain</string>
        </property>
       </widget>
      </widget>
@@ -326,8 +308,8 @@ font-size:15px;
       <widget class="QPushButton" name="pushButton_3">
        <property name="geometry">
         <rect>
-         <x>210</x>
-         <y>420</y>
+         <x>200</x>
+         <y>410</y>
          <width>190</width>
          <height>19</height>
         </rect>
@@ -380,8 +362,8 @@ font-size:15px;
       <widget class="QPushButton" name="pushButton_4">
        <property name="geometry">
         <rect>
-         <x>30</x>
-         <y>420</y>
+         <x>0</x>
+         <y>410</y>
          <width>190</width>
          <height>19</height>
         </rect>
@@ -434,7 +416,7 @@ font-size:15px;
       <widget class="QLabel" name="label_15">
        <property name="geometry">
         <rect>
-         <x>10</x>
+         <x>30</x>
          <y>70</y>
          <width>91</width>
          <height>31</height>
@@ -497,7 +479,7 @@ font-size:15px;
       <widget class="QComboBox" name="comboboxmodif">
        <property name="geometry">
         <rect>
-         <x>60</x>
+         <x>80</x>
          <y>80</y>
          <width>151</width>
          <height>22</height>
@@ -507,8 +489,8 @@ font-size:15px;
       <widget class="QPushButton" name="pushButton_12">
        <property name="geometry">
         <rect>
-         <x>220</x>
-         <y>80</y>
+         <x>80</x>
+         <y>120</y>
          <width>190</width>
          <height>19</height>
         </rect>
@@ -635,29 +617,11 @@ font-size:15px;
         <string>Modifier</string>
        </property>
       </widget>
-      <widget class="QPushButton" name="pushButton_7">
-       <property name="geometry">
-        <rect>
-         <x>170</x>
-         <y>250</y>
-         <width>190</width>
-         <height>19</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <pointsize>-1</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>Annuler</string>
-       </property>
-      </widget>
       <widget class="QPushButton" name="pushButton_8">
        <property name="geometry">
         <rect>
-         <x>10</x>
-         <y>250</y>
+         <x>90</x>
+         <y>180</y>
          <width>190</width>
          <height>19</height>
         </rect>
@@ -676,7 +640,7 @@ font-size:15px;
         <rect>
          <x>90</x>
          <y>70</y>
-         <width>151</width>
+         <width>181</width>
          <height>22</height>
         </rect>
        </property>
@@ -684,7 +648,7 @@ font-size:15px;
       <widget class="QPushButton" name="pushButton_11">
        <property name="geometry">
         <rect>
-         <x>170</x>
+         <x>90</x>
          <y>120</y>
          <width>190</width>
          <height>19</height>
@@ -697,24 +661,6 @@ font-size:15px;
        </property>
        <property name="text">
         <string>Afficher </string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="pushButton_14">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>120</y>
-         <width>190</width>
-         <height>19</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <pointsize>-1</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>Historique</string>
        </property>
       </widget>
      </widget>
@@ -791,28 +737,10 @@ font-size:15px;
       <property name="title">
        <string>Rechercher une transaction</string>
       </property>
-      <widget class="QLabel" name="label_6">
+      <widget class="QLineEdit" name="who_rech">
        <property name="geometry">
         <rect>
-         <x>20</x>
-         <y>80</y>
-         <width>91</width>
-         <height>31</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <pointsize>10</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>ID : </string>
-       </property>
-      </widget>
-      <widget class="QLineEdit" name="id_transaction_2">
-       <property name="geometry">
-        <rect>
-         <x>150</x>
+         <x>220</x>
          <y>90</y>
          <width>151</width>
          <height>21</height>
@@ -868,6 +796,31 @@ font-size:15px;
         </rect>
        </property>
       </widget>
+      <widget class="QComboBox" name="combo_rech">
+       <property name="geometry">
+        <rect>
+         <x>60</x>
+         <y>90</y>
+         <width>151</width>
+         <height>22</height>
+        </rect>
+       </property>
+       <item>
+        <property name="text">
+         <string>ID</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Montant</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Description</string>
+        </property>
+       </item>
+      </widget>
      </widget>
     </widget>
     <widget class="QWidget" name="tab_5">
@@ -891,24 +844,6 @@ font-size:15px;
       <property name="title">
        <string>Trier les transactions</string>
       </property>
-      <widget class="QPushButton" name="pushButton_33">
-       <property name="geometry">
-        <rect>
-         <x>220</x>
-         <y>360</y>
-         <width>190</width>
-         <height>19</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <pointsize>-1</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>Annuler</string>
-       </property>
-      </widget>
       <widget class="QTableView" name="tableView3">
        <property name="geometry">
         <rect>
@@ -922,8 +857,8 @@ font-size:15px;
       <widget class="QPushButton" name="pushButton_34">
        <property name="geometry">
         <rect>
-         <x>10</x>
-         <y>360</y>
+         <x>380</x>
+         <y>330</y>
          <width>190</width>
          <height>19</height>
         </rect>
@@ -936,6 +871,51 @@ font-size:15px;
        <property name="text">
         <string>Trier</string>
        </property>
+      </widget>
+      <widget class="QComboBox" name="combo_tri">
+       <property name="geometry">
+        <rect>
+         <x>30</x>
+         <y>330</y>
+         <width>151</width>
+         <height>22</height>
+        </rect>
+       </property>
+       <item>
+        <property name="text">
+         <string>ID</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Description</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Debit_Credit</string>
+        </property>
+       </item>
+      </widget>
+      <widget class="QComboBox" name="combo_tri_mode">
+       <property name="geometry">
+        <rect>
+         <x>210</x>
+         <y>330</y>
+         <width>151</width>
+         <height>22</height>
+        </rect>
+       </property>
+       <item>
+        <property name="text">
+         <string>Croissant</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Décroissant</string>
+        </property>
+       </item>
       </widget>
      </widget>
     </widget>
