--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -75,7 +75,7 @@ font-size:15px;
 </string>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="affiche">
      <attribute name="title">
@@ -86,7 +86,7 @@ font-size:15px;
        <rect>
         <x>20</x>
         <y>20</y>
-        <width>691</width>
+        <width>731</width>
         <height>431</height>
        </rect>
       </property>
@@ -119,7 +119,7 @@ font-size:15px;
       <widget class="QLineEdit" name="id_transaction">
        <property name="geometry">
         <rect>
-         <x>150</x>
+         <x>140</x>
          <y>90</y>
          <width>151</width>
          <height>21</height>
@@ -168,7 +168,7 @@ font-size:15px;
       <widget class="QLineEdit" name="debit_transaction">
        <property name="geometry">
         <rect>
-         <x>150</x>
+         <x>140</x>
          <y>330</y>
          <width>161</width>
          <height>21</height>
@@ -178,7 +178,7 @@ font-size:15px;
       <widget class="QLineEdit" name="montant_transaction">
        <property name="geometry">
         <rect>
-         <x>150</x>
+         <x>140</x>
          <y>190</y>
          <width>151</width>
          <height>21</height>
@@ -224,7 +224,7 @@ font-size:15px;
       <widget class="QDateEdit" name="date_transaction">
        <property name="geometry">
         <rect>
-         <x>150</x>
+         <x>140</x>
          <y>130</y>
          <width>151</width>
          <height>22</height>
@@ -275,11 +275,75 @@ font-size:15px;
       <widget class="QLineEdit" name="description_transaction">
        <property name="geometry">
         <rect>
-         <x>150</x>
+         <x>140</x>
          <y>250</y>
          <width>151</width>
          <height>61</height>
         </rect>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="comboboxajout">
+       <property name="geometry">
+        <rect>
+         <x>540</x>
+         <y>80</y>
+         <width>131</width>
+         <height>22</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_6">
+       <property name="geometry">
+        <rect>
+         <x>340</x>
+         <y>80</y>
+         <width>191</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Transaction par contrat </string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="pushButton_7">
+       <property name="geometry">
+        <rect>
+         <x>530</x>
+         <y>130</y>
+         <width>190</width>
+         <height>19</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>-1</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Afficher</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="pushButton_9">
+       <property name="geometry">
+        <rect>
+         <x>330</x>
+         <y>130</y>
+         <width>190</width>
+         <height>19</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>-1</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Valider</string>
        </property>
       </widget>
      </widget>
@@ -692,7 +756,7 @@ font-size:15px;
        <rect>
         <x>40</x>
         <y>70</y>
-        <width>571</width>
+        <width>631</width>
         <height>261</height>
        </rect>
       </property>
@@ -712,7 +776,7 @@ font-size:15px;
        </font>
       </property>
       <property name="text">
-       <string>Exporter dans fichier excel</string>
+       <string>Exporter via fichier excel</string>
       </property>
      </widget>
     </widget>
@@ -986,21 +1050,11 @@ font-size:15px;
       <property name="title">
        <string>Gain de transactions</string>
       </property>
-      <widget class="QTableView" name="tableView3_3">
-       <property name="geometry">
-        <rect>
-         <x>20</x>
-         <y>80</y>
-         <width>631</width>
-         <height>241</height>
-        </rect>
-       </property>
-      </widget>
       <widget class="QPushButton" name="pushButton_38">
        <property name="geometry">
         <rect>
-         <x>230</x>
-         <y>340</y>
+         <x>20</x>
+         <y>390</y>
          <width>190</width>
          <height>19</height>
         </rect>
@@ -1014,22 +1068,14 @@ font-size:15px;
         <string>Calculer le gain</string>
        </property>
       </widget>
-      <widget class="QPushButton" name="pushButton_39">
+      <widget class="QTextEdit" name="textEdit">
        <property name="geometry">
         <rect>
-         <x>30</x>
-         <y>340</y>
-         <width>190</width>
-         <height>19</height>
+         <x>10</x>
+         <y>50</y>
+         <width>541</width>
+         <height>301</height>
         </rect>
-       </property>
-       <property name="font">
-        <font>
-         <pointsize>-1</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>Afficher les transactions</string>
        </property>
       </widget>
      </widget>
